--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueuse/motion": "^2.2.6",
     "pinia": "^2.2.6",
     "vue": "^3.5.12",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "vue3-typed-js": "^0.0.1",
+    "vuesax-alpha": "0.2.0-beta.79",
+    "vuesax3": "^4.2.1"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
@@ -28,6 +32,8 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^9.30.0",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
     "npm-run-all2": "^7.0.1",
     "postcss": "^8.4.49",
     "prettier": "^3.3.3",
