--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,8 @@
     {
       "path": "./tsconfig.app.json"
     }
-  ]
+  ],
+  "compilerOptions": {
+    "types": ["vuesax-alpha/global","*.d.ts"],
+  }
 }
