--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@pixi/sound": "^6.0.1",
     "@vueuse/motion": "^2.2.6",
     "pinia": "^2.2.6",
     "vue": "^3.5.12",
