--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@pixi/sound": "^6.0.1",
     "@vueuse/motion": "^2.2.6",
+    "disable-devtool": "^0.3.8",
     "pinia": "^2.2.6",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
